# ChangeLog for sys-freebsd/freebsd-ubin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-ubin/ChangeLog,v 1.16 2006/09/11 22:36:45 flameeyes Exp $

  11 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-ubin-6.1.ebuild:
  Also move mkfifo in /bin.

  10 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-ubin-6.1.ebuild:
  Move awk and sed in /bin to be available during boot process.

  27 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  -freebsd-ubin-6.0-r1.ebuild:
  Remove 6.0 version.

  30 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/freebsd-ubin-6.1-gcc41.patch, freebsd-ubin-6.1.ebuild:
  Add patch to build with GCC 4.1.

*freebsd-ubin-6.1 (09 May 2006)

  09 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -freebsd-ubin-6.1_rc2.ebuild, +freebsd-ubin-6.1.ebuild:
  Update to 6.1-RELEASE.

*freebsd-ubin-6.1_rc2 (02 May 2006)

  02 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -freebsd-ubin-6.1_rc1.ebuild, +freebsd-ubin-6.1_rc2.ebuild:
  Update to 6.1_rc2.

*freebsd-ubin-6.1_rc1 (01 May 2006)

  01 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +freebsd-ubin-6.1_rc1.ebuild:
  Update to 6.1_rc1.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/locate-updatedb-cron:
  Fix typo in updatedb cron file.

  20 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-ubin-6.0-r1.ebuild:
  Drop dependency on freebsd-headers.

  09 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-ubin-6.0-r1.ebuild:
  Add dependency over freebsd-lib as that has to be rebuilt as first in the
  emerge system call.

  03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/freebsd-ubin-6.0-kdump-ioctl.patch, freebsd-ubin-6.0-r1.ebuild:
  Add patch that makes mkioctl only look into the original includes, so that
  it doesn't get confused when Xorg is installed.

  03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-ubin-6.0-r1.ebuild: