@@ -51,14 +51,14 @@ DIST freebsd-etc-6.1.tar.bz2 184045 RMD160 b9a8bea64694c040c02b74f7633dc3cd77afa
 DIST freebsd-include-6.1.tar.bz2 127179 RMD160 f873b13bb16408a390932d14974b39336bd90a7c SHA1 747d7498ce80846274e49ed4487440dcbefe96af SHA256 9cd9d47c5cc8ea4fc7afe185c9b391317fe013adb3f0a960e9fe498f166177b5
 DIST freebsd-lib-6.1.tar.bz2 2613584 RMD160 f71aad95ef2bac094bdab9e317a99fb866fba042 SHA1 c7fed3b4a996fdd25f97eef428dd40023dc53a7e SHA256 6ecb49695dc135e64cea949cb7e9b9998b15cb962797cdafc735a7e244744c37
 DIST freebsd-ubin-6.1.tar.bz2 1763218 RMD160 5da58c546cebf30a6b661841dbcb5b53626a4a1e SHA1 7d1b0568d02f192dcd3bd7f972613376d3d0f16d SHA256 13429ed3cc8a14a4efda69b7d82004bf993b5a14591a6129a857d627221aeef6
-EBUILD freebsd-ubin-6.1.ebuild 2787 RMD160 1ed510e4763bfc547f2a5e3d0549bf2e7d2e8ab2 SHA1 a810bf2e1d466f5abe41535348c27f61c0076166 SHA256 0dbe6393a65889ae8ea9098d31bdb11d2a7e75855736b0e1f3a6e6e9cbc8269a
-MD5 a57ca8dae400461ed4c2f5ac0506e7d0 freebsd-ubin-6.1.ebuild 2787
-RMD160 1ed510e4763bfc547f2a5e3d0549bf2e7d2e8ab2 freebsd-ubin-6.1.ebuild 2787
-SHA256 0dbe6393a65889ae8ea9098d31bdb11d2a7e75855736b0e1f3a6e6e9cbc8269a freebsd-ubin-6.1.ebuild 2787
-MISC ChangeLog 6870 RMD160 5d9ed3912ed6f784a2879fdc80d27a7f2e10a1d0 SHA1 76e882a56dd79ef58a546ca80d5e883413b27e66 SHA256 4c7bc45b8aa7020a3ef58c53ff1489e813e7511d55a0993389ab786760eacfe3
-MD5 dfb883a6f1c74f8db500c1595b3c0ee0 ChangeLog 6870
-RMD160 5d9ed3912ed6f784a2879fdc80d27a7f2e10a1d0 ChangeLog 6870
-SHA256 4c7bc45b8aa7020a3ef58c53ff1489e813e7511d55a0993389ab786760eacfe3 ChangeLog 6870
+EBUILD freebsd-ubin-6.1.ebuild 2796 RMD160 7f174b8597c3a558a33d95503747db30585d5a7b SHA1 4ba1bb2e29648ff92b52b069bb0ea463885006ba SHA256 e4691c1b0f6cf28a3efd5b49c3bf6bc96e331ec1b8cc0412a84f2adfa79b222f
+MD5 fbee694f998f780d821ae0019d646e18 freebsd-ubin-6.1.ebuild 2796
+RMD160 7f174b8597c3a558a33d95503747db30585d5a7b freebsd-ubin-6.1.ebuild 2796
+SHA256 e4691c1b0f6cf28a3efd5b49c3bf6bc96e331ec1b8cc0412a84f2adfa79b222f freebsd-ubin-6.1.ebuild 2796
+MISC ChangeLog 7009 RMD160 a47be2273b257382ace3e70c5fe453c9d04e3236 SHA1 592264bd58b765152342111df7c3b9392cc4b04a SHA256 8d5d377d386a7edc29e824ecb0a404310d6f8e1fd43a99f29e8cc99586fa7d8f
+MD5 2277dba4bc03579ec4f3c58dca882f0c ChangeLog 7009
+RMD160 a47be2273b257382ace3e70c5fe453c9d04e3236 ChangeLog 7009
+SHA256 8d5d377d386a7edc29e824ecb0a404310d6f8e1fd43a99f29e8cc99586fa7d8f ChangeLog 7009
 MISC metadata.xml 156 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 SHA1 d9d9d4f2b5afc58339ea3e562fca490156935f1f SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7
 MD5 2bd48a5ae413433cbb36110b219ce97c metadata.xml 156
 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 metadata.xml 156
@@ -69,7 +69,7 @@ SHA256 cfdac09bb63d09d942690cf6956d5d9f805de04a60457dc1a672903ecc217bbd files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFBeUGAiZjviIA2XgRApNDAKCNWLOPM+8+5ezNQHuIQuE5TypvJACgz6oz
-JkjlQdW4dFQ8IOZTZYh9cfQ=
-=ttaj
+iD8DBQFFBzMjAiZjviIA2XgRAiGKAKDp9GjElTTFBSH+62Fw5H37wRzM4QCgjiIf
+LhiQUW1gXs2bNnHMD9FmiN8=
+=a0s/
 -----END PGP SIGNATURE-----
